# jj-agent

./: .gitignore  ARTIFACTS_COLLECTION.md  ARTIFACTS_COLLECTION_FINAL.md  ARTIFACTS_SUBMISSION_TEMPLATE.md  ARTIFACTS_TEMPLATE.md  CHANGELOG.md  CI_CD_FIX_APPLIED.md  CI_CD_TROUBLESHOOTING.md  COLLECT_ARTIFACTS.sh  CONFIGURE_AND_PUSH.sh  CREATE_ROADMAP_PR.sh  Dockerfile  EXAMPLE_USAGE.md  EXECUTE_NOW.md  EXECUTE_NOW_FINAL.md  EXECUTE_RELEASE.ps1  EXECUTE_RELEASE.sh  EXECUTE_RELEASE_COMPLETE.sh  EXECUTE_RELEASE_FINAL.sh  EXECUTE_RELEASE_STEP_BY_STEP.md  EXECUTE_RELEASE_WITH_PREFLIGHT.sh  EXECUTION_READY.md  FINAL_CHECKLIST.md  FINAL_EXECUTION_SUMMARY.md  FINAL_RELEASE_STATUS.md  GO_NOGO_CHECKLIST.md  MANIFEST.in  OPERATIONS.md  POST_RELEASE_TIDY.sh  PRODUCTION_READY.md  PROJECT_SUMMARY.md  PUSH_AND_VERIFY.md  PUSH_RELEASE_NOW.sh  QUICKSTART.md  README.md  READY_TO_EXECUTE.md  RELEASE_CHECKLIST.md  RELEASE_COMPLETE.md  RELEASE_EXECUTION.md  RELEASE_EXECUTION_COMPLETE.md  (+35 more)
.github/workflows/: release.yml  verify-release.yml
agent/: __init__.py  executor.py  planner.py
api/: __init__.py  llm_client.py  server.py
cli/: __init__.py  commands.py  main.py
jj-agent/jj_agent/logging/: audit.py  (+1 more)
jj_agent/: __init__.py
jj_agent/logging/: __init__.py  logger.py
logging/: __init__.py  audit.py  logger.py
runtime/: __init__.py  localsafe.py  sandboxed.py
skills/: __init__.py  fastapi.py
state/: __init__.py  manager.py
tests/: __init__.py  test_config.py  test_e2e.py  test_security.py
tools/: __init__.py  dockerx.py  fs.py  git.py  pkg.py  shell.py  tests.py  web.py
