[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jj-agent"
version = "0.1.0"
description = "Local-first super-agent for code generation"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.3.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
]

[project.scripts]
jj = "cli.main:main"

